@@ -2,15 +2,13 @@ package de.tum.in.www1.artemis.service.programming;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.concurrent.Executors;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -22,41 +20,36 @@ import javax.xml.transform.TransformerException;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
 import javax.xml.transform.stream.StreamResult;
-import javax.xml.xpath.*;
+import javax.xml.xpath.XPath;
+import javax.xml.xpath.XPathConstants;
+import javax.xml.xpath.XPathException;
+import javax.xml.xpath.XPathFactory;
 
 import org.apache.commons.io.FileUtils;
 import org.eclipse.jgit.api.errors.GitAPIException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.converter.json.MappingJackson2HttpMessageConverter;
 import org.springframework.stereotype.Service;
-import org.springframework.util.FileSystemUtils;
 import org.w3c.dom.Document;
 import org.w3c.dom.Node;
 import org.xml.sax.InputSource;
 import org.xml.sax.SAXException;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 import de.tum.in.www1.artemis.domain.*;
-import de.tum.in.www1.artemis.domain.Submission;
 import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
 import de.tum.in.www1.artemis.domain.enumeration.RepositoryType;
-import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseParticipation;
-import de.tum.in.www1.artemis.domain.participation.ProgrammingExerciseStudentParticipation;
-import de.tum.in.www1.artemis.domain.participation.StudentParticipation;
-import de.tum.in.www1.artemis.domain.plagiarism.text.TextPlagiarismResult;
+import de.tum.in.www1.artemis.domain.participation.*;
 import de.tum.in.www1.artemis.exception.GitException;
 import de.tum.in.www1.artemis.repository.ProgrammingExerciseRepository;
 import de.tum.in.www1.artemis.repository.StudentParticipationRepository;
 import de.tum.in.www1.artemis.service.FileService;
-import de.tum.in.www1.artemis.service.UrlService;
 import de.tum.in.www1.artemis.service.ZipFileService;
 import de.tum.in.www1.artemis.service.connectors.GitService;
-import de.tum.in.www1.artemis.service.util.TimeLogUtil;
 import de.tum.in.www1.artemis.web.rest.dto.RepositoryExportOptionsDTO;
-import de.tum.in.www1.artemis.web.rest.errors.BadRequestAlertException;
-import jplag.*;
-import jplag.options.LanguageOption;
-import jplag.reporting.Report;
 
 @Service
 public class ProgrammingExerciseExportService {
@@ -71,78 +64,157 @@ public class ProgrammingExerciseExportService {
 
     private final StudentParticipationRepository studentParticipationRepository;
 
+    private final ObjectMapper objectMapper;
+
     private final FileService fileService;
 
     private final GitService gitService;
 
     private final ZipFileService zipFileService;
 
-    private final UrlService urlService;
+    public static final String EXPORTED_EXERCISE_DETAILS_FILE_PREFIX = "Exercise-Details";
 
-    private final ScheduledExecutorService executor = Executors.newScheduledThreadPool(Runtime.getRuntime().availableProcessors());
+    public static final String EXPORTED_EXERCISE_PROBLEM_STATEMENT_FILE_PREFIX = "Problem-Statement";
 
     public ProgrammingExerciseExportService(ProgrammingExerciseRepository programmingExerciseRepository, StudentParticipationRepository studentParticipationRepository,
-            FileService fileService, GitService gitService, ZipFileService zipFileService, UrlService urlService) {
+            FileService fileService, GitService gitService, ZipFileService zipFileService, MappingJackson2HttpMessageConverter springMvcJacksonConverter) {
         this.programmingExerciseRepository = programmingExerciseRepository;
         this.studentParticipationRepository = studentParticipationRepository;
+        this.objectMapper = springMvcJacksonConverter.getObjectMapper();
         this.fileService = fileService;
         this.gitService = gitService;
         this.zipFileService = zipFileService;
-        this.urlService = urlService;
     }
 
     /**
-     * Export a programming exercise by creating a zip file. The zip file includes all student, template, solution,
-     * and tests repositories.
+     * Export programming exercise material for instructors including instructor repositories, problem statement (.md) and exercise detail (.json).
      *
-     * @param exercise           the programming exercise
-     * @param pathToStoreZipFile The path to a directory that will be used to store the zipped programming exercise.
-     * @param exportErrors       List of failures that occurred during the export
+     * @param exercise     the programming exercise
+     * @param exportErrors List of failures that occurred during the export
      * @return the path to the zip file
      */
-    public Path exportProgrammingExercise(ProgrammingExercise exercise, String pathToStoreZipFile, List<String> exportErrors) {
-        // Will contain the zipped files. Note that there can be null elements
-        // because e.g exportStudentRepositories returns null if student repositories don't
-        // exist.
-        var zipFiles = new ArrayList<File>();
+    public Path exportProgrammingExerciseInstructorMaterial(ProgrammingExercise exercise, List<String> exportErrors) {
+        // Create export directory for programming exercises
+        var exportDir = Path.of(repoDownloadClonePath, "programming-exercise-material");
+        fileService.createDirectory(exportDir);
 
-        // Lazy load student participations and set the export options.
-        var studentParticipations = studentParticipationRepository.findByExerciseId(exercise.getId()).stream()
-                .map(studentParticipation -> (ProgrammingExerciseStudentParticipation) studentParticipation).collect(Collectors.toList());
-        var exportOptions = new RepositoryExportOptionsDTO();
-        exportOptions.setHideStudentNameInZippedFolder(false);
+        // List to add paths of files that should be contained in the zip folder of exported programming exercise:
+        // i.e., problem statement, exercise details, instructor repositories
+        var pathsToBeZipped = new ArrayList<Path>();
 
-        // Export student repositories
-        var studentZipFilePaths = exportStudentRepositories(exercise, studentParticipations, exportOptions, exportErrors).stream().filter(Objects::nonNull).map(Path::toFile)
-                .collect(Collectors.toList());
-        zipFiles.addAll(studentZipFilePaths);
+        // Add the exported zip folder containing template, solution, and tests repositories
+        pathsToBeZipped.add(exportProgrammingExerciseRepositories(exercise, false, exportDir, exportErrors));
 
-        // Export the template, solution, and tests repositories
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TEMPLATE, exportErrors));
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.SOLUTION, exportErrors));
-        zipFiles.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TESTS, exportErrors));
+        // Add problem statement as .md file
+        var problemStatementFileExtension = ".md";
+        String problemStatementFileName = EXPORTED_EXERCISE_PROBLEM_STATEMENT_FILE_PREFIX + "-" + exercise.getTitle() + problemStatementFileExtension;
+        String cleanProblemStatementFileName = fileService.removeIllegalCharacters(problemStatementFileName);
+        var problemStatementExportPath = Path.of(exportDir.toString(), cleanProblemStatementFileName);
+        pathsToBeZipped.add(fileService.writeStringToFile(exercise.getProblemStatement(), problemStatementExportPath));
 
-        // Remove null elements and get the file path of each zip file.
-        var zipFilePathsNonNull = zipFiles.stream().filter(Objects::nonNull).map(File::toPath).collect(Collectors.toList());
+        // Add programming exercise details (object) as .json file
+        var exerciseDetailsFileExtension = ".json";
+        String exerciseDetailsFileName = EXPORTED_EXERCISE_DETAILS_FILE_PREFIX + "-" + exercise.getTitle() + exerciseDetailsFileExtension;
+        String cleanExerciseDetailsFileName = fileService.removeIllegalCharacters(exerciseDetailsFileName);
+        var exerciseDetailsExportPath = Path.of(exportDir.toString(), cleanExerciseDetailsFileName);
+        pathsToBeZipped.add(fileService.writeObjectToJsonFile(exercise, this.objectMapper, exerciseDetailsExportPath));
 
+        // Setup path to store the zip file for the exported programming exercise
+        var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
+        String exportedExerciseZipFileName = "Material-" + exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId()
+                + "-" + timestamp + ".zip";
+        String cleanFilename = fileService.removeIllegalCharacters(exportedExerciseZipFileName);
+        Path pathToZippedExercise = Path.of(exportDir.toString(), cleanFilename);
+
+        // Create the zip folder of the exported programming exercise and return the path to the created folder
         try {
-            // Zip the student and instructor repos together.
-            var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
-            var filename = exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId() + "-" + timestamp + ".zip";
-            var pathToZippedExercise = Path.of(pathToStoreZipFile, filename);
-            zipFileService.createZipFile(pathToZippedExercise, zipFilePathsNonNull, false);
+            zipFileService.createZipFile(pathToZippedExercise, pathsToBeZipped, false);
             return pathToZippedExercise;
         }
         catch (IOException e) {
-            var error = "Failed to export programming exercise " + exercise.getId() + " because the zip file " + pathToStoreZipFile + " could not be created: " + e.getMessage();
+            var error = "Failed to export programming exercise because the zip file " + pathToZippedExercise + " could not be created: " + e.getMessage();
             log.info(error);
             exportErrors.add(error);
             return null;
         }
         finally {
-            // Delete the zipped repo files since we don't need those anymore.
-            zipFilePathsNonNull.forEach(zipFilePath -> fileService.scheduleForDeletion(zipFilePath, 1));
+            // Delete the export directory
+            fileService.scheduleForDirectoryDeletion(exportDir, 5);
         }
+    }
+
+    /**
+     * Export instructor repositories and optionally students' repositories in a zip file.
+     *
+     * @param exercise              the programming exercise
+     * @param includingStudentRepos flag for including the students repos as well
+     * @param outputDir             the path to a directory that will be used to store the zipped programming exercise.
+     * @param exportErrors          List of failures that occurred during the export
+     * @return the path to the zip file
+     */
+    public Path exportProgrammingExerciseRepositories(ProgrammingExercise exercise, Boolean includingStudentRepos, Path outputDir, List<String> exportErrors) {
+        log.info("Exporting programming exercise {} with title {}", exercise.getId(), exercise.getTitle());
+        // List to add paths of files that should be contained in the zip folder of exported programming exercise repositories:
+        // i.e., student repositories (if `includingStudentRepos` is true), instructor repositories template, solution and tests
+        var pathsToBeZipped = new ArrayList<Path>();
+
+        if (includingStudentRepos) {
+            // Lazy load student participation and set the export options
+            var studentParticipations = studentParticipationRepository.findByExerciseId(exercise.getId()).stream()
+                    .map(studentParticipation -> (ProgrammingExerciseStudentParticipation) studentParticipation).collect(Collectors.toList());
+            var exportOptions = new RepositoryExportOptionsDTO();
+            exportOptions.setHideStudentNameInZippedFolder(false);
+
+            // Export student repositories and add them to list
+            var exportedStudentRepositoryFiles = exportStudentRepositories(exercise, studentParticipations, exportOptions, outputDir, exportErrors).stream()
+                    .filter(Objects::nonNull).collect(Collectors.toList());
+            pathsToBeZipped.addAll(exportedStudentRepositoryFiles);
+        }
+
+        // Export the template, solution, and tests repositories and add them to list
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TEMPLATE, outputDir, exportErrors).map(File::toPath).orElse(null));
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.SOLUTION, outputDir, exportErrors).map(File::toPath).orElse(null));
+        pathsToBeZipped.add(exportInstructorRepositoryForExercise(exercise.getId(), RepositoryType.TESTS, outputDir, exportErrors).map(File::toPath).orElse(null));
+
+        // Setup path to store the zip file for the exported repositories
+        var timestamp = ZonedDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd-Hmss"));
+        String filename = exercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + exercise.getTitle() + "-" + exercise.getId() + "-" + timestamp + ".zip";
+        String cleanFilename = fileService.removeIllegalCharacters(filename);
+        Path pathToZippedExercise = Path.of(outputDir.toString(), cleanFilename);
+
+        // Remove null elements and get the file path of each file to be included, i.e. each entry in the pathsToBeZipped list
+        var includedFilePathsNotNull = pathsToBeZipped.stream().filter(Objects::nonNull).collect(Collectors.toList());
+
+        // Create the zip folder of the exported programming exercise and return the path to the created folder
+        try {
+            zipFileService.createZipFile(pathToZippedExercise, includedFilePathsNotNull, false);
+            return pathToZippedExercise;
+        }
+        catch (IOException e) {
+            var error = "Failed to export programming exercise because the zip file " + pathToZippedExercise + " could not be created: " + e.getMessage();
+            log.info(error);
+            exportErrors.add(error);
+            return null;
+        }
+        finally {
+            // Delete the output directory
+            fileService.scheduleForDirectoryDeletion(outputDir, 2);
+        }
+    }
+
+    /**
+     * Exports a repository available for an instructor/tutor for a given programming exercise. This can be a template,
+     * solution, or tests repository.
+     *
+     * The repository download directory is used as the output directory and is destroyed after 5 minutes.
+     * @param exerciseId The id of the programming exercise that has the repository
+     * @param repositoryType the type of repository to export
+     * @param exportErrors List of failures that occurred during the export
+     * @return a zipped file
+     */
+    public Optional<File> exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, List<String> exportErrors) {
+        Path outputDir = fileService.getUniquePath(repoDownloadClonePath);
+        return exportInstructorRepositoryForExercise(exerciseId, repositoryType, outputDir, exportErrors);
     }
 
     /**
@@ -151,16 +223,17 @@ public class ProgrammingExerciseExportService {
      *
      * @param exerciseId     The id of the programming exercise that has the repository
      * @param repositoryType the type of repository to export
+     * @param outputDir The directory used for store the zip file
      * @param exportErrors   List of failures that occurred during the export
      * @return a zipped file
      */
-    public File exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, List<String> exportErrors) {
+    public Optional<File> exportInstructorRepositoryForExercise(long exerciseId, RepositoryType repositoryType, Path outputDir, List<String> exportErrors) {
         var exerciseOrEmpty = programmingExerciseRepository.findWithTemplateAndSolutionParticipationById(exerciseId);
         if (exerciseOrEmpty.isEmpty()) {
             var error = "Failed to export instructor repository " + repositoryType + " because the exercise " + exerciseId + " does not exist.";
             log.info(error);
             exportErrors.add(error);
-            return null;
+            return Optional.empty();
         }
 
         var exercise = exerciseOrEmpty.get();
@@ -168,7 +241,7 @@ public class ProgrammingExerciseExportService {
 
         // Construct the name of the zip file
         String courseShortName = exercise.getCourseViaExerciseGroupOrCourseMember().getShortName();
-        String zippedRepoName = courseShortName + "-" + exercise.getTitle() + "-" + repositoryType.getName();
+        String zippedRepoName = fileService.removeIllegalCharacters(courseShortName + "-" + exercise.getTitle() + "-" + repositoryType.getName());
 
         try {
             // Get the url to the repository and zip it.
@@ -179,24 +252,26 @@ public class ProgrammingExerciseExportService {
                 var error = "Failed to export instructor repository " + repositoryType + " because the repository url is not defined.";
                 log.info(error);
                 exportErrors.add(error);
-                return null;
+                return Optional.empty();
             }
 
-            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName);
+            Path zippedRepo = createZipForRepository(repositoryUrl, zippedRepoName, outputDir);
             if (zippedRepo != null) {
-                return new File(zippedRepo.toString());
+                return Optional.of(new File(zippedRepo.toString()));
             }
         }
-        catch (IOException | GitAPIException | GitException | InterruptedException ex) {
+        catch (IOException | UncheckedIOException | GitAPIException | GitException | InterruptedException ex) {
             var error = "Failed to export instructor repository " + repositoryType + " for programming exercise '" + exercise.getTitle() + "' (id: " + exercise.getId() + ")";
-            log.info(error);
+            log.info(error + ": " + ex.getMessage());
             exportErrors.add(error);
         }
-        return null;
+        return Optional.empty();
     }
 
     /**
      * Get participations of programming exercises of a requested list of students packed together in one zip file.
+     *
+     * The repository download directory is used as the output directory and is destroyed after 5 minutes.
      *
      * @param programmingExerciseId   the id of the exercise entity
      * @param participations          participations that should be exported
@@ -208,14 +283,20 @@ public class ProgrammingExerciseExportService {
         ProgrammingExercise programmingExercise = programmingExerciseRepository.findWithTemplateAndSolutionParticipationTeamAssignmentConfigCategoriesById(programmingExerciseId)
                 .get();
 
-        var zippedRepos = exportStudentRepositories(programmingExercise, participations, repositoryExportOptions, new ArrayList<>());
+        Path outputDir = fileService.getUniquePath(repoDownloadClonePath);
+        var zippedRepos = exportStudentRepositories(programmingExercise, participations, repositoryExportOptions, outputDir, new ArrayList<>());
 
-        // delete project root folder
-        final var targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-        deleteReposDownloadProjectRootDirectory(programmingExercise, targetPath);
-
-        // Create a zip folder containing the zipped repositories.
-        return createZipWithAllRepositories(programmingExercise, zippedRepos);
+        try {
+            // Create a zip folder containing the zipped repositories.
+            return createZipWithAllRepositories(programmingExercise, zippedRepos, outputDir);
+        }
+        catch (IOException ex) {
+            log.error("Creating zip file for programming exercise {} did not work correctly: {} ", programmingExercise.getTitle(), ex.getMessage());
+            return null;
+        }
+        finally {
+            fileService.scheduleForDirectoryDeletion(outputDir, 5);
+        }
     }
 
     /**
@@ -224,11 +305,12 @@ public class ProgrammingExerciseExportService {
      * @param programmingExercise     the programming exercise
      * @param participations          participations that should be exported
      * @param repositoryExportOptions the options that should be used for the export
+     * @param outputDir The directory used for store the zip file
      * @param exportErrors            A list of errors that occured during export (populated by this function)
      * @return List of zip file paths
      */
     public List<Path> exportStudentRepositories(ProgrammingExercise programmingExercise, @NotNull List<ProgrammingExerciseStudentParticipation> participations,
-            RepositoryExportOptionsDTO repositoryExportOptions, List<String> exportErrors) {
+            RepositoryExportOptionsDTO repositoryExportOptions, Path outputDir, List<String> exportErrors) {
         var programmingExerciseId = programmingExercise.getId();
         if (repositoryExportOptions.isExportAllParticipants()) {
             log.info("Request to export all student or team repositories of programming exercise {} with title '{}'", programmingExerciseId, programmingExercise.getTitle());
@@ -238,21 +320,21 @@ public class ProgrammingExerciseExportService {
                     programmingExercise.getTitle(), participations.stream().map(StudentParticipation::getParticipantIdentifier).collect(Collectors.joining(", ")));
         }
 
-        List<Path> zippedRepos = Collections.synchronizedList(new ArrayList<>());
-        participations.parallelStream().forEach(participation -> {
+        List<Path> exportedStudentRepositories = new ArrayList<>();
+        participations.forEach(participation -> {
             try {
-                var zippedRepo = createZipForRepositoryWithParticipation(programmingExercise, participation, repositoryExportOptions);
-                if (zippedRepo != null) {
-                    zippedRepos.add(zippedRepo);
+                Path zipFile = createZipForRepositoryWithParticipation(programmingExercise, participation, repositoryExportOptions, outputDir);
+                if (zipFile != null) {
+                    exportedStudentRepositories.add(zipFile);
                 }
             }
-            catch (IOException e) {
+            catch (IOException | UncheckedIOException e) {
                 var error = "Failed to export the student repository with participation: " + participation.getId() + " for programming exercise '" + programmingExercise.getTitle()
                         + "' (id: " + programmingExercise.getId() + ") because the repository couldn't be downloaded. ";
                 exportErrors.add(error);
             }
         });
-        return zippedRepos;
+        return exportedStudentRepositories;
     }
 
     /**
@@ -260,27 +342,24 @@ public class ProgrammingExerciseExportService {
      *
      * @param repositoryUrl The url of the repository to zip
      * @param zipFilename   The name of the zip file
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return The path to the zip file.
      * @throws IOException if the zip file couldn't be created
      * @throws GitAPIException if the repo couldn't get checked out
      * @throws InterruptedException if the repo couldn't get checked out
      */
-    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename) throws IOException, GitAPIException, GitException, InterruptedException {
-        var repoProjectPath = fileService.getUniquePathString(repoDownloadClonePath);
-        Repository repository = null;
+    private Path createZipForRepository(VcsRepositoryUrl repositoryUrl, String zipFilename, Path outputDir)
+            throws IOException, GitAPIException, GitException, InterruptedException, UncheckedIOException {
+        var repositoryDir = fileService.getUniquePathString(outputDir.toString());
+        Repository repository;
 
-        try {
-            // Checkout the repository
-            repository = gitService.getOrCheckoutRepository(repositoryUrl, repoProjectPath, true);
-            gitService.resetToOriginMaster(repository);
+        // Checkout the repository
+        repository = gitService.getOrCheckoutRepository(repositoryUrl, repositoryDir, true);
+        gitService.resetToOriginMaster(repository);
+        repository.close();
 
-            // Zip it and return the path to the file
-            return gitService.zipRepository(repository.getLocalPath(), zipFilename, repoProjectPath);
-        }
-        finally {
-            deleteTempLocalRepository(repository);
-            fileService.scheduleForDirectoryDeletion(Path.of(repoProjectPath), 5);
-        }
+        // Zip it and return the path to the file
+        return gitService.zipRepository(repository, zipFilename, repositoryDir);
     }
 
     /**
@@ -288,32 +367,22 @@ public class ProgrammingExerciseExportService {
      *
      * @param programmingExercise The programming exercise to which all repos belong to
      * @param pathsToZippedRepos  The paths to all zipped repositories
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return the zip file
      */
-    private File createZipWithAllRepositories(ProgrammingExercise programmingExercise, List<Path> pathsToZippedRepos) {
+    private File createZipWithAllRepositories(ProgrammingExercise programmingExercise, List<Path> pathsToZippedRepos, Path outputDir) throws IOException {
         if (pathsToZippedRepos.isEmpty()) {
             log.warn("The zip file could not be created. Ignoring the request to export repositories for exercise {}", programmingExercise.getTitle());
             return null;
         }
 
-        try {
-            log.debug("Create zip file for {} repositorie(s) of programming exercise: {}", pathsToZippedRepos.size(), programmingExercise.getTitle());
+        log.debug("Create zip file for {} repositorie(s) of programming exercise: {}", pathsToZippedRepos.size(), programmingExercise.getTitle());
+        String filename = programmingExercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + programmingExercise.getShortName() + "-" + System.currentTimeMillis()
+                + ".zip";
 
-            String filename = programmingExercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + programmingExercise.getShortName() + "-"
-                    + System.currentTimeMillis() + ".zip";
-            Path zipFilePath = Paths.get(pathsToZippedRepos.get(0).getParent().toString(), filename);
-            zipFileService.createZipFile(zipFilePath, pathsToZippedRepos, false);
-            fileService.scheduleForDeletion(zipFilePath, 5);
-            return new File(zipFilePath.toString());
-        }
-        catch (IOException ex) {
-            log.error("Creating zip file for programming exercise {} did not work correctly: {} ", programmingExercise.getTitle(), ex.getMessage());
-            return null;
-        }
-        finally {
-            // we do some cleanup here to prevent future errors with file handling
-            deleteTempZipRepoFiles(pathsToZippedRepos);
-        }
+        Path zipFilePath = Path.of(outputDir.toString(), filename);
+        zipFileService.createZipFile(zipFilePath, pathsToZippedRepos, false);
+        return new File(zipFilePath.toString());
     }
 
     /**
@@ -323,24 +392,20 @@ public class ProgrammingExerciseExportService {
      * @param programmingExercise     The programming exercise for the participation
      * @param participation           The participation, for which the repository should get zipped
      * @param repositoryExportOptions The options, that should get applied to the zipeed repo
+     * @param outputDir The directory used for downloading and zipping the repository
      * @return The checked out and zipped repository
      * @throws IOException if zip file creation failed
      */
     private Path createZipForRepositoryWithParticipation(final ProgrammingExercise programmingExercise, final ProgrammingExerciseStudentParticipation participation,
-            final RepositoryExportOptionsDTO repositoryExportOptions) throws IOException {
+            final RepositoryExportOptionsDTO repositoryExportOptions, Path outputDir) throws IOException, UncheckedIOException {
         if (participation.getVcsRepositoryUrl() == null) {
             log.warn("Ignore participation {} for export, because its repository URL is null", participation.getId());
             return null;
         }
 
-        String targetPath = null;
-        Repository repository = null;
         try {
-            // Construct a unique path that will contain repo contents
-            targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-
             // Checkout the repository
-            repository = gitService.getOrCheckoutRepository(participation, targetPath);
+            Repository repository = gitService.getOrCheckoutRepository(participation, outputDir.toString());
             if (repository == null) {
                 log.warn("Cannot checkout repository for participation id: {}", participation.getId());
                 return null;
@@ -374,15 +439,11 @@ public class ProgrammingExerciseExportService {
             }
 
             log.debug("Create temporary zip file for repository {}", repository.getLocalPath().toString());
-            return gitService.zipRepositoryWithParticipation(repository, targetPath, repositoryExportOptions.isHideStudentNameInZippedFolder());
+            return gitService.zipRepositoryWithParticipation(repository, outputDir.toString(), repositoryExportOptions.isHideStudentNameInZippedFolder());
         }
         catch (InterruptedException | GitAPIException | GitException e) {
             log.error("Cannot create zip for participation id {} because the repo download clone path is invalid.", participation.getId());
             return null;
-        }
-        finally {
-            deleteTempLocalRepository(repository);
-            fileService.scheduleForDirectoryDeletion(Path.of(targetPath), 5);
         }
     }
 
@@ -404,185 +465,7 @@ public class ProgrammingExerciseExportService {
         }
     }
 
-    /**
-     * downloads all repos of the exercise and runs JPlag
-     *
-     * @param programmingExerciseId the id of the programming exercises which should be checked
-     * @param similarityThreshold   ignore comparisons whose similarity is below this threshold (%)
-     * @param minimumScore          consider only submissions whose score is greater or equal to this value
-     * @return a zip file that can be returned to the client
-     * @throws ExitException is thrown if JPlag exits unexpectedly
-     * @throws IOException   is thrown for file handling errors
-     */
-    public TextPlagiarismResult checkPlagiarism(long programmingExerciseId, float similarityThreshold, int minimumScore) throws ExitException, IOException {
-        long start = System.nanoTime();
-
-        final var programmingExercise = programmingExerciseRepository.findWithAllParticipationsById(programmingExerciseId).get();
-
-        final var numberOfParticipations = programmingExercise.getStudentParticipations().size();
-        log.info("Download repositories for JPlag programming comparison with {} participations", numberOfParticipations);
-
-        final var targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-        List<ProgrammingExerciseParticipation> participations = studentParticipationsForComparison(programmingExercise, minimumScore);
-
-        if (participations.size() < 2) {
-            log.info("Insufficient amount of submissions for plagiarism detection. Return empty result.");
-            TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult();
-            textPlagiarismResult.setExercise(programmingExercise);
-            textPlagiarismResult.setSimilarityDistribution(new int[0]);
-
-            return textPlagiarismResult;
-        }
-
-        List<Repository> repositories = downloadRepositories(programmingExercise, participations, targetPath);
-        log.info("Downloading repositories done");
-
-        final var projectKey = programmingExercise.getProjectKey();
-        final var repoFolder = Paths.get(targetPath, projectKey).toString();
-        final LanguageOption programmingLanguage = getJPlagProgrammingLanguage(programmingExercise);
-
-        final var templateRepoName = urlService.getRepositorySlugFromRepositoryUrl(programmingExercise.getTemplateParticipation().getVcsRepositoryUrl());
-
-        JPlagOptions options = new JPlagOptions(repoFolder, programmingLanguage);
-        if (templateRepoName != null) {
-            options.setBaseCodeSubmissionName(templateRepoName);
-        }
-
-        // Important: for large courses with more than 1000 students, we might get more than one million results and 10 million files in the file system due to many 0% results,
-        // therefore we limit the results to at least 50% or 0.5 similarity, the passed threshold is between 0 and 100%
-        options.setSimilarityThreshold(similarityThreshold);
-
-        log.info("Start JPlag programming comparison");
-
-        JPlag jplag = new JPlag(options);
-        JPlagResult result = jplag.run();
-
-        log.info("JPlag programming comparison finished with {} comparisons", result.getComparisons().size());
-
-        cleanupResourcesAsync(programmingExercise, repositories, targetPath);
-
-        TextPlagiarismResult textPlagiarismResult = new TextPlagiarismResult(result);
-        textPlagiarismResult.setExercise(programmingExercise);
-
-        log.info("JPlag programming comparison for {} participations done in {}", numberOfParticipations, TimeLogUtil.formatDurationFrom(start));
-
-        return textPlagiarismResult;
-    }
-
-    /**
-     * downloads all repos of the exercise and runs JPlag
-     *
-     * @param programmingExerciseId the id of the programming exercises which should be checked
-     * @param similarityThreshold   ignore comparisons whose similarity is below this threshold (%)
-     * @param minimumScore          consider only submissions whose score is greater or equal to this value
-     * @return a zip file that can be returned to the client
-     * @throws ExitException is thrown if JPlag exits unexpectedly
-     * @throws IOException is created the zip failed
-     */
-    public File checkPlagiarismWithJPlagReport(long programmingExerciseId, float similarityThreshold, int minimumScore) throws ExitException, IOException {
-        long start = System.nanoTime();
-
-        final var programmingExercise = programmingExerciseRepository.findWithAllParticipationsById(programmingExerciseId).get();
-        final var numberOfParticipations = programmingExercise.getStudentParticipations().size();
-
-        log.info("Download repositories for JPlag programming comparison with {} participations", numberOfParticipations);
-        final var targetPath = fileService.getUniquePathString(repoDownloadClonePath);
-        List<ProgrammingExerciseParticipation> participations = studentParticipationsForComparison(programmingExercise, minimumScore);
-
-        if (participations.size() < 2) {
-            log.info("Insufficient amount of submissions for plagiarism detection. Return empty result.");
-            return null;
-        }
-
-        List<Repository> repositories = downloadRepositories(programmingExercise, participations, targetPath);
-        log.info("Downloading repositories done");
-
-        final var output = "output";
-        final var projectKey = programmingExercise.getProjectKey();
-        final var outputFolder = Paths.get(targetPath, projectKey + "-" + output).toString();
-        final var outputFolderFile = new File(outputFolder);
-
-        outputFolderFile.mkdirs();
-
-        final var repoFolder = Paths.get(targetPath, projectKey).toString();
-        final LanguageOption programmingLanguage = getJPlagProgrammingLanguage(programmingExercise);
-
-        final var templateRepoName = urlService.getRepositorySlugFromRepositoryUrl(programmingExercise.getTemplateParticipation().getVcsRepositoryUrl());
-
-        JPlagOptions options = new JPlagOptions(repoFolder, programmingLanguage);
-        if (templateRepoName != null) {
-            options.setBaseCodeSubmissionName(templateRepoName);
-        }
-
-        // Important: for large courses with more than 1000 students, we might get more than one million results and 10 million files in the file system due to many 0% results,
-        // therefore we limit the results to at least 50% or 0.5 similarity, the passed threshold is between 0 and 100%
-        options.setSimilarityThreshold(similarityThreshold);
-
-        log.info("Start JPlag programming comparison");
-        JPlag jplag = new JPlag(options);
-        JPlagResult result = jplag.run();
-        log.info("JPlag programming comparison finished with {} comparisons", result.getComparisons().size());
-
-        log.info("Write JPlag report to file system");
-        Report jplagReport = new Report(outputFolderFile);
-        jplagReport.writeResult(result);
-
-        log.info("JPlag report done. Will zip it now");
-
-        final var zipFilePath = Paths.get(targetPath, programmingExercise.getCourseViaExerciseGroupOrCourseMember().getShortName() + "-" + programmingExercise.getShortName() + "-"
-                + System.currentTimeMillis() + "-Jplag-Analysis-Output.zip");
-        zipFileService.createZipFileWithFolderContent(zipFilePath, Paths.get(outputFolder));
-
-        log.info("JPlag report zipped. Delete report output folder");
-
-        // cleanup
-        if (outputFolderFile.exists()) {
-            FileSystemUtils.deleteRecursively(outputFolderFile);
-        }
-
-        cleanupResourcesAsync(programmingExercise, repositories, targetPath);
-
-        log.info("Schedule deletion of zip file in 1 minute");
-        fileService.scheduleForDeletion(zipFilePath, 1);
-
-        log.info("JPlag programming report for {} participations done in {}", numberOfParticipations, TimeLogUtil.formatDurationFrom(start));
-
-        return new File(zipFilePath.toString());
-    }
-
-    private void cleanupResourcesAsync(final ProgrammingExercise programmingExercise, final List<Repository> repositories, final String targetPath) {
-        executor.schedule(() -> {
-            log.info("Will delete local repositories");
-            deleteLocalRepositories(repositories);
-            // delete project root folder in the repos download folder
-            deleteReposDownloadProjectRootDirectory(programmingExercise, targetPath);
-            log.info("Delete repositories done");
-        }, 10, TimeUnit.SECONDS);
-    }
-
-    private LanguageOption getJPlagProgrammingLanguage(ProgrammingExercise programmingExercise) {
-        return switch (programmingExercise.getProgrammingLanguage()) {
-            case JAVA -> LanguageOption.JAVA_1_9;
-            case C -> LanguageOption.C_CPP;
-            case PYTHON -> LanguageOption.PYTHON_3;
-            default -> throw new BadRequestAlertException("Programming language " + programmingExercise.getProgrammingLanguage() + " not supported for plagiarism check.",
-                    "ProgrammingExercise", "notSupported");
-        };
-    }
-
-    private void deleteLocalRepositories(List<Repository> repositories) {
-        repositories.parallelStream().forEach(repository -> {
-            var localPath = repository.getLocalPath();
-            try {
-                deleteTempLocalRepository(repository);
-            }
-            catch (GitException ex) {
-                log.error("Delete repository {} did not work as expected: {}", localPath, ex.getMessage());
-            }
-        });
-    }
-
-    private void deleteReposDownloadProjectRootDirectory(ProgrammingExercise programmingExercise, String targetPath) {
+    public void deleteReposDownloadProjectRootDirectory(ProgrammingExercise programmingExercise, String targetPath) {
         final String projectDirName = programmingExercise.getProjectKey();
         Path projectPath = Paths.get(targetPath, projectDirName);
         try {
@@ -590,56 +473,8 @@ public class ProgrammingExerciseExportService {
             FileUtils.deleteDirectory(projectPath.toFile());
         }
         catch (IOException ex) {
-            log.warn("The project root directory '" + projectPath.toString() + "' could not be deleted.", ex);
+            log.warn("The project root directory '" + projectPath + "' could not be deleted.", ex);
         }
-    }
-
-    private List<Repository> downloadRepositories(ProgrammingExercise programmingExercise, List<ProgrammingExerciseParticipation> participations, String targetPath) {
-        List<Repository> downloadedRepositories = new ArrayList<>();
-
-        participations.forEach(participation -> {
-            try {
-                Repository repo = gitService.getOrCheckoutRepositoryForJPlag(participation, targetPath);
-                gitService.resetToOriginMaster(repo); // start with clean state
-                downloadedRepositories.add(repo);
-            }
-            catch (GitException | GitAPIException | InterruptedException ex) {
-                log.error("Clone student repository {} in exercise '{}' did not work as expected: {}", participation.getVcsRepositoryUrl(), programmingExercise.getTitle(),
-                        ex.getMessage());
-            }
-        });
-
-        // clone the template repo
-        try {
-            Repository templateRepo = gitService.getOrCheckoutRepository(programmingExercise.getTemplateParticipation(), targetPath);
-            gitService.resetToOriginMaster(templateRepo); // start with clean state
-            downloadedRepositories.add(templateRepo);
-        }
-        catch (GitException | GitAPIException | InterruptedException ex) {
-            log.error("Clone template repository {} in exercise '{}' did not work as expected: {}", programmingExercise.getTemplateParticipation().getVcsRepositoryUrl(),
-                    programmingExercise.getTitle(), ex.getMessage());
-        }
-
-        return downloadedRepositories;
-    }
-
-    /**
-     * Find all studentParticipations of the given exercise for plagiarism comparison.
-     *
-     * @param programmingExercise ProgrammingExercise to fetcch the participations for
-     * @param minimumScore        consider only submissions whose score is greater or equal to this value
-     * @return List containing the latest text submission for every participation
-     */
-    public List<ProgrammingExerciseParticipation> studentParticipationsForComparison(ProgrammingExercise programmingExercise, int minimumScore) {
-        var studentParticipations = studentParticipationRepository.findAllWithEagerLegalSubmissionsAndEagerResultsByExerciseId(programmingExercise.getId());
-
-        return studentParticipations.parallelStream().filter(participation -> participation instanceof ProgrammingExerciseParticipation)
-                .map(participation -> (ProgrammingExerciseParticipation) participation).filter(participation -> participation.getVcsRepositoryUrl() != null)
-                .filter(participation -> {
-                    Submission submission = ((StudentParticipation) participation).findLatestSubmission().orElse(null);
-                    return minimumScore == 0 || submission != null && submission.getLatestResult() != null && submission.getLatestResult().getScore() != null
-                            && submission.getLatestResult().getScore() >= minimumScore;
-                }).collect(Collectors.toList());
     }
 
     /**
@@ -647,7 +482,7 @@ public class ProgrammingExerciseExportService {
      *
      * @param repository The repository that should get deleted
      */
-    private void deleteTempLocalRepository(Repository repository) {
+    public void deleteTempLocalRepository(Repository repository) {
         // we do some cleanup here to prevent future errors with file handling
         // We can always delete the repository as it won't be used by the student (separate path)
         if (repository != null) {
